<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

      
    <ImageButton
        android:id="@+id/Imagebtton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/deuda"
        android:src="@drawable/ic_launcher" />
    
    <Button
        android:id="@+id/Amigos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:enabled="true"
        android:onClick="loguear"
        android:text="@string/Amigos" />
    
        <Button
        android:id="@+id/Noticias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Amigos"
        android:layout_alignBottom="@+id/Amigos"
        android:layout_toLeftOf="@+id/Amigos"
        android:enabled="true"
        android:onClick="buscar"
        android:text="@string/Noticias" />

    <Button
        android:id="@+id/deuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Noticias"
        android:layout_alignBottom="@+id/Noticias"
        android:layout_toLeftOf="@+id/Noticias"
        android:enabled="true"
        android:onClick="infor"
        android:text="@string/Deuda" />
    

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/Amigos"
        android:layout_marginTop="32dp"
        android:src="@drawable/bandera_and" />
   
    <ScrollView
        android:id="@+id/scroll"
        android:layout_below="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_above="@+id/busc"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/LinearScroll"
            android:layout_width="match_parent"
            android:layout_height="388dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/NUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/User"
                android:maxLines="1"
                android:singleLine="true" />

   <EditText
       android:id="@+id/Nombre"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_below="@+id/NUsuario"
       android:hint="@string/Nombre"
       android:maxLines="1"
       android:singleLine="true" />

   <EditText
       android:id="@+id/apellido1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_below="@+id/Nombre"
       android:hint="@string/ap1"
       android:maxLines="1"
       android:singleLine="true" />

   <EditText
       android:id="@+id/apellido2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_below="@+id/apellido1"
       android:ems="10"
       android:hint="@string/ap2"
       android:maxLines="1"
       android:singleLine="true" >

       <requestFocus />
   </EditText>

   <Spinner
       android:id="@+id/Pob"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_below="@+id/apellido2"
       android:layout_marginTop="17dp"
       android:text="@string/Selectpb" />
    	 </LinearLayout>
    </ScrollView>

   <Button
       android:id="@+id/busc"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="51dp"
       android:text="@string/Buscar" />
   
</RelativeLayout>
