<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >


    <Button
        android:id="@+id/loggin"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBaseline="@+id/info"
        android:layout_alignBottom="@+id/info"
        android:layout_alignParentRight="true"
        android:enabled="true"
        android:onClick="loguear"
        android:text="@string/Log" />

    <Button
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/loggin"
        android:enabled="true"
        android:onClick="infor"
        android:text="@string/Info" />

    <Button
        android:id="@+id/busqueda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/info"
        android:layout_alignBottom="@+id/info"
        android:layout_toLeftOf="@+id/info"
        android:enabled="true"
        android:onClick="buscar"
        android:text="@string/Busqueda" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/busqueda"
        android:src="@drawable/bandera_and" />

     <ScrollView
        android:id="@+id/scroll"
        android:layout_below="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_above="@+id/button1"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/LinearScroll"
            android:layout_width="match_parent"
            android:layout_height="388dp"
            android:orientation="vertical" >
    
    <EditText
        android:id="@+id/Fecha_nolog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Tit_nolog"
        android:layout_below="@+id/Tit_nolog"
        android:ems="10"
        android:hint="Fecha: dd/mm/aaaa"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/Tit_nolog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cat"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Titular"
        android:maxLines="1"
        android:singleLine="true" />

    <Spinner
        android:id="@+id/cat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Selectcat" />

    <Spinner
        android:id="@+id/Pob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/Selectpb" />
  
    	 </LinearLayout>
    </ScrollView>
    
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/Buscar" />

</RelativeLayout>
