<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >



    <ImageButton
        android:id="@+id/Imagebtton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/deuda"
        android:src="@drawable/ic_launcher" />
    
    <Button
        android:id="@+id/Amigos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:enabled="true"
        android:onClick="loguear"
        android:text="@string/Amigos" />
    
        <Button
        android:id="@+id/Noticias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Amigos"
        android:layout_alignBottom="@+id/Amigos"
        android:layout_toLeftOf="@+id/Amigos"
        android:enabled="true"
        android:onClick="buscar"
        android:text="@string/Noticias" />

    <Button
        android:id="@+id/deuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Noticias"
        android:layout_alignBottom="@+id/Noticias"
        android:layout_toLeftOf="@+id/Noticias"
        android:enabled="true"
        android:onClick="infor"
        android:text="@string/Deuda" />
    

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/Amigos"
        android:layout_marginTop="32dp"
        android:src="@drawable/bandera_and" />

     <ScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/blog"
         android:layout_below="@+id/imageView1" >

        <LinearLayout
            android:id="@+id/LinearScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
    
	<DatePicker
	    android:id="@+id/datePicker1"
	    android:layout_width="match_parent"
	    android:layout_height="100dp"
	    android:scaleY="0.5" />

    <EditText
        android:id="@+id/Tit_nolog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Titular"
        android:maxLines="1"
        android:singleLine="true" >

    </EditText>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Pueblo" >

    </AutoCompleteTextView>

    <Spinner
        android:id="@+id/cat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Selectcat" />

  	 </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/blog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Buscar" />

</RelativeLayout>
