<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >
	
    <ImageButton
        android:id="@+id/Imagebtton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/deuda"
        android:src="@drawable/ic_launcher" />
    
    <Button
        android:id="@+id/Amigos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:enabled="true"
        android:onClick="loguear"
        android:text="@string/Amigos" />
    
        <Button
        android:id="@+id/Noticias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Amigos"
        android:layout_alignBottom="@+id/Amigos"
        android:layout_toLeftOf="@+id/Amigos"
        android:enabled="true"
        android:onClick="buscar"
        android:text="@string/Noticias" />

    <Button
        android:id="@+id/deuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Noticias"
        android:layout_alignBottom="@+id/Noticias"
        android:layout_toLeftOf="@+id/Noticias"
        android:enabled="true"
        android:onClick="infor"
        android:text="@string/Deuda" />
    

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/Amigos"
        android:layout_marginTop="32dp"
        android:src="@drawable/bandera_and" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/busc"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/fl"
        android:divider="#000000"
        android:dividerHeight="1dp" >

    </ListView>

    <Button
        android:id="@+id/busc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Buscador" />

    <TextView
        android:id="@+id/resultados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/imageView1"
        android:textColor="#008000"
    	android:textStyle="bold|italic"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/fl"
 	    android:layout_height= "30dp"
	    android:layout_width= "30dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:src="@drawable/fl" />

    <ImageView
        android:id="@+id/fr"
	    android:layout_height= "30dp"
	    android:layout_width= "30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView1"
        android:src="@drawable/fr" />

</RelativeLayout>
