<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >
        
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button1"
        android:layout_below="@+id/imageView1" >

   <LinearLayout
            android:id="@+id/LinearScroll"
            android:layout_width="match_parent"
            android:layout_height="388dp"
            android:orientation="vertical" >
    
    <EditText
        android:id="@+id/Usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/User"
        android:maxLines="1"
        android:singleLine="true" />

      <EditText
          android:id="@+id/pass"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_below="@+id/Usuario"
          android:ems="10"
          android:hint="@string/pass"
          android:inputType="textPassword"
          android:maxLines="1"
          android:singleLine="true" />

      <EditText
          android:id="@+id/conpass"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_below="@+id/pass"
          android:ems="10"
          android:hint="@string/confpass"
          android:inputType="textPassword"
          android:maxLines="1"
          android:singleLine="true" />


      <EditText
          android:id="@+id/name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_below="@+id/conpass"
          android:ems="10"
          android:hint="Nombre"
          android:maxLines="1"
          android:singleLine="true" />

      <EditText
          android:id="@+id/ap1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_below="@+id/name"
          android:ems="10"
          android:hint="Primer apellido"
          android:maxLines="1"
          android:singleLine="true" />

      <EditText
          android:id="@+id/ap2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_below="@+id/ap1"
          android:ems="10"
          android:hint="Segundo apellido"
          android:maxLines="1"
          android:singleLine="true" >

      </EditText>

      <EditText
          android:id="@+id/Correo"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="@string/correo"
          android:maxLines="1"
          android:singleLine="true" >

      </EditText>

      
      
      <AutoCompleteTextView
          android:id="@+id/autoCompleteTextView1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="Pueblo" />
      
    </LinearLayout>
    </ScrollView>

      <Button
          android:id="@+id/button1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"
          android:text="@string/registrarse" />



    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:src="@drawable/bandera_and" />

    <ImageView
        android:id="@+id/Entrar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/Imagebtton"
        android:layout_marginRight="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/entrar1" />

    <ImageView
        android:id="@+id/Info"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/Entrar"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/Entrar"
        android:src="@drawable/info" />

    <ImageView
        android:id="@+id/Buscar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/Entrar"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/Info"
        android:src="@drawable/busqueda" />
    <ImageView
        android:id="@+id/Imagebtton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />

      
</RelativeLayout>