<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageButton
        android:id="@+id/Imagebtton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/deuda"
        android:src="@drawable/ic_launcher" />
    
    <Button
        android:id="@+id/Amigos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:enabled="true"
        android:onClick="loguear"
        android:text="@string/Amigos" />
    
        <Button
        android:id="@+id/Noticias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Amigos"
        android:layout_alignBottom="@+id/Amigos"
        android:layout_toLeftOf="@+id/Amigos"
        android:enabled="true"
        android:onClick="buscar"
        android:text="@string/Noticias" />

    <Button
        android:id="@+id/deuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Noticias"
        android:layout_alignBottom="@+id/Noticias"
        android:layout_toLeftOf="@+id/Noticias"
        android:enabled="true"
        android:onClick="infor"
        android:text="@string/Deuda" />
    

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/Amigos"
        android:layout_marginTop="32dp"
        android:src="@drawable/bandera_and" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button1"
        android:layout_below="@+id/imageView1" >

   <LinearLayout
            android:id="@+id/LinearScroll"
            android:layout_width="match_parent"
            android:layout_height="388dp"
            android:orientation="vertical" >

    <TextView
        android:id="@+id/bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/imageView1"
        android:text="Bienvenido"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/pueblo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bienvenida"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="Pueblo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/pueblo"
        android:layout_marginTop="32dp"
        android:text="Última noticia de su municipio:"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/noticias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:text="@string/Notrec"
        android:textAppearance="?android:attr/textAppearanceMedium" />

         	
    </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Buscador de noticias" />

</RelativeLayout>